src/test/ui/const-eval/issue-44578.nll.stderr
error[E0080]: erroneous constant used
  --> $DIR/issue-44578.rs:35:5
   |
LL |     println!("{}", <Bar<u16, u8> as Foo>::AMT);
   |     ^^^^^^^^^^^^^^^--------------------------^^
   |                    |
   |                    referenced constant has errors
   |
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error[E0080]: erroneous constant used
  --> $DIR/issue-44578.rs:35:20
   |
LL |     println!("{}", <Bar<u16, u8> as Foo>::AMT);
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^ referenced constant has errors

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0080`.
